# py-lintro

./: .gitignore  .lintro-config.yaml  .lintro-ignore  .markdownlint-cli2.jsonc  .osv-scanner.toml  .oxfmtrc.json  .pre-commit-hooks.yaml  .prettierignore  .typos.toml  .vale.ini  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DCO.md  Dockerfile  Dockerfile.base  Dockerfile.tools  MANIFEST.in  Makefile  README.md  SECURITY.md  docker-compose.yml  findings.md  justfile  lintro.1  osv-scanner.toml  package.json  pyproject.toml  pytest.ini  renovate.json
.github/: SECURITY.md  labeler.yml  pages-bundle-manifest.json  pull_request_template.md  renovate-pr-template.md
.github/ISSUE_TEMPLATE/: new-tool.md
.github/actions/: README.md
.github/workflows/: README.md  ai-review.yml  auto-rerun-on-infra-failure.yml  auto-tag-on-main.yml  backfill-docker-tags.yml  build-binary.yml  ci-pipeline.yml  codeql.yml  dependency-review.yml  dependency-vuln-gate.yml  deploy-pages.yml  docker-build-publish.yml  docker-ci.yml  docker-tools-publish.yml  dogfood-nightly.yml  ghcr-cleanup.yml  homebrew-formula-lint.yml  image-drift-check.yml  lintro-report-scheduled.yml  mirror-release.yml  pages-deploy-coverage.yml  pr-auto-assign.yml  pr-comment-cleanup.yml  pr-labeler.yml  pr-size.yml  publish-npm.yml  publish-pypi-on-tag.yml  publish-testpypi.yml  quality-ci.yml  release-auto-tag.yml  release-version-pr.yml  renovate.yml  reusable-build.yml  reusable-quality.yml  reusable-sbom.yml  sbom-on-main.yml  scorecards.yml  semantic-pr-title.yml  semantic-release.yml  site-quality.yml  (+6 more)
.lintro-cache/ai/: audit.json
apps/site/: .gitignore  .markdownlint-cli2.jsonc  astro.config.mjs  package.json  tsconfig.json  vitest.config.ts
benchmarks/: README.md  __init__.py  run-hyperfine.sh  run.py
benchmarks/configs/: .mega-linter.yml  .pre-commit-config.yaml
benchmarks/fixtures/small-python/: README.md  pyproject.toml
benchmarks/fixtures/small-python/src/: calculator.py  strings.py
benchmarks/harness/: __init__.py  detect.py  results.py  runners.py  timing.py
benchmarks/hyperfine/: sequential-ruff-mypy.sh
benchmarks/results/: latest.json  latest.md
docker/: tools.Dockerfile
docs/: README.md  ai-features.md  comparison.md  configuration.md  contributing.md  docker.md  getting-started.md  github-integration.md  mcp.md  npm-distribution.md  plugins.md  pre-commit.md  template-aware.md  testing.md  troubleshooting.md  watch-mode.md
docs/adr/: 0001-native-parser-per-tool.md  0002-per-execution-tool-isolation.md  0003-sarif-partial-adoption.md  0004-release-automation-version-pr-flow.md  0005-uv-and-bun-toolchain.md  README.md  template.md
docs/architecture/: ARCHITECTURE.md  ROADMAP.md
docs/contributing/: adding-a-new-tool.md
docs/design/: README.md  checklist-yaml-authoring-evaluation.md  sarif-ingestion-evaluation.md
docs/security/: README.md
docs/tool-analysis/: README.md  buf-analysis.md  checkov-analysis.md  commitlint-analysis.md  cppcheck-analysis.md  djlint-analysis.md  dotenv-linter-analysis.md  golangci-lint-analysis.md  html-validate-analysis.md  idiom-review-analysis.md  j2lint-analysis.md  ktlint-analysis.md  osv-scanner-analysis.md  oxc-analysis.md  phpstan-analysis.md  pip-audit-analysis.md  rubocop-analysis.md  spectral-analysis.md  stylelint-analysis.md  swiftlint-analysis.md  terraform-analysis.md  trivy-analysis.md  trufflehog-analysis.md  tsc-analysis.md  typos-analysis.md  vale-analysis.md  vue-tsc-analysis.md
docs/usage/: README.md  library-api.md
lintro/: __init__.py  _generated_versions.py  _tool_packages.py  _tool_versions.py  cli.py
lintro/ai/: __init__.py  apply.py  audit.py  availability.py  budget.py  cache.py  checkpoints.py  cli_schemas.py  config.py  config_views.py  cost.py  display.py  doctor_checks.py  enums.py  exceptions.py  fallback.py  filters.py  fix.py  fix_context.py  fix_params.py  fix_parsing.py  hook.py  interactive.py  invoke.py  json_response.py  metadata.py  model_pricing.py  models.py  orchestrator.py  paths.py  pipeline.py  prompts.py  provider_enum.py  provider_info.py  refinement.py  registry.py  rerun.py  retry.py  risk.py  sanitize.py  (+9 more)
lintro/api/: __init__.py  core.py
lintro/ascii-art/: fail.txt  success.txt
lintro/cli_utils/: command_chainer.py  diff_option.py  onboarding.py
lintro/config/: __init__.py  config_loader.py  config_validator.py  deps_config.py  execution_config.py  licenses_config.py  lintro_config.py  output_config.py  review_config.py  score_config.py  template_aware_config.py  tool_config_generator.py  watch_config.py
lintro/enums/: display_column.py  doc_url_template.py  group_by.py  install_context.py  issue_category.py  output_format.py  pytest_enums.py  severity_level.py  tool_name.py  tool_status.py  update_channel.py
lintro/formatters/: __init__.py  formatter.py
lintro/licenses/: __init__.py  _spdx_data.py  attribution.py  detector.py  models.py  policy_engine.py  report.py  spdx.py
lintro/mcp/: __init__.py  annotations.py  errors.py  registry.py  server.py
lintro/parsers/: base_issue.py  base_parser.py
lintro/plugins/: __init__.py  base.py  discovery.py  execution_preparation.py  file_discovery.py  file_processor.py  protocol.py  registry.py  subprocess_executor.py  subprocess_failure.py
lintro/profiling/: __init__.py  report.py  suggestions.py  timer.py
lintro/template_aware/: __init__.py  api.py  prerenderer.py  router.py  source_map.py  translator.py
lintro/tools/: __init__.py  manifest.json
lintro/utils/: ai_metadata.py  async_tool_executor.py  config.py  config_constants.py  display_helpers.py  file_cache.py  git_diff.py  health_score.py  issue_category.py  json_output.py  jsonc.py  lazy_logger.py  logger_setup.py  module_size.py  native_parsers.py  path_utils.py  (+8 more)
scripts/: ORGANIZATION.md  README.md  generate-man-page.py
tests/: conftest.py  test_documentation.py  test_samples_helpers.py
tools/ascii_resizer/: README.md  __init__.py  braille.py  cli.py  pyproject.toml  resizer.py
tools/ascii_resizer/tests/: __init__.py  test_braille.py  test_resizer.py
(+1494 files in other folders)
