[build-system]
requires = ["setuptools==83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lintro"
version = "0.83.0"
description = "A unified CLI tool for code formatting, linting, and quality assurance"
keywords = [
  "linting",
  "formatting",
  "code-quality",
  "cli",
  "python",
  "javascript",
  "yaml",
  "docker",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
  "click>=8.1.8",
  "loguru>=0.7.3",
  "packaging>=25.0",
  "pathspec>=0.12.1",
  "pydantic>=2.12.5",
  "pyyaml>=6.0",
  "rich>=14.2.0",
  "tabulate>=0.9.0",
  "httpx>=0.28.1",
  "defusedxml>=0.7.1",
  "identify>=2.6.19",
]
authors = [{ name = "lgtm-hq", email = "turbocoder13@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "pytest-xdist>=3.8.0",
  "pytest-sugar>=1.1.1",
  "tox>=4.34.1",
  "allure-pytest>=2.15.3",
  "ruff>=0.15.9",
  "mypy>=1.19.1",
  "coverage-badge>=1.1.2",
  "assertpy>=1.1",
  "httpx>=0.28.1",
]
test = [
  "pytest>=9.0.3",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "pytest-xdist>=3.8.0",
  "assertpy>=1.1",
]
typing = ["types-setuptools>=80.9.0.20251223", "types-tabulate>=0.9.0.20241207"]
full = [
  "ruff>=0.15.9",
  "black>=26.3.1",
  "bandit>=1.9.4",
  "mypy>=1.19.1",
  "pydoclint>=0.8.3",
  "yamllint>=1.37.1",
]
ai = ["anthropic>=0.39.0", "openai>=1.50.0"]
tools = ["semgrep>=1.151.0", "sqlfluff>=4.0.0", "pip-audit>=2.10.1"]

[project.scripts]
lintro = "lintro.cli:main"

[project.urls]
Homepage = "https://github.com/lgtm-hq/py-lintro"
Documentation = "https://github.com/lgtm-hq/py-lintro/docs"
Source = "https://github.com/lgtm-hq/py-lintro"

[project.entry-points."lintro.plugins"]

[dependency-groups]
dev = [
  "build>=1.4.0",
  "pytest>=9.0.3",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0",
  "twine>=6.2.0",
  "assertpy>=1.1",
  "pytest-mock>=3.15.1",
  "bandit>=1.9.4",
  "black>=26.3.1",
  "ruff>=0.15.9",
  "yamllint>=1.37.1",
  "pytest-timeout>=2.4.0",
  "mypy>=1.19.1",
  "types-PyYAML>=6.0.12.20250915",
  "types-tabulate>=0.9.0.20241207",
  "types-defusedxml>=0.7.0.20250822",
  "tomlkit>=0.13.3",
  "click-man>=0.5.1",
]
build = ["nuitka>=2.8.9", "ordered-set>=4.1.0", "zstandard>=0.25.0"]

[tool.setuptools]
packages = [
  "lintro",
  "lintro.api",
  "lintro.ai",
  "lintro.ai.display",
  "lintro.ai.enums",
  "lintro.ai.integrations",
  "lintro.ai.metadata",
  "lintro.ai.models",
  "lintro.ai.output",
  "lintro.ai.prompts",
  "lintro.ai.prompts.templates",
  "lintro.ai.providers",
  "lintro.ai.review",
  "lintro.ai.review.checklist",
  "lintro.ai.review.chunker",
  "lintro.ai.review.context",
  "lintro.ai.review.enums",
  "lintro.ai.review.models",
  "lintro.cli_utils",
  "lintro.cli_utils.commands",
  "lintro.config",
  "lintro.enums",
  "lintro.exceptions",
  "lintro.formatters",
  "lintro.formatters.core",
  "lintro.formatters.styles",
  "lintro.licenses",
  "lintro.licenses.ecosystems",
  "lintro.models",
  "lintro.models.core",
  "lintro.parsers",
  "lintro.parsers.actionlint",
  "lintro.parsers.astro_check",
  "lintro.parsers.bandit",
  "lintro.parsers.black",
  "lintro.parsers.cargo_audit",
  "lintro.parsers.cargo_deny",
  "lintro.parsers.clippy",
  "lintro.parsers.commitlint",
  "lintro.parsers.dotenv_linter",
  "lintro.parsers.gitleaks",
  "lintro.parsers.hadolint",
  "lintro.parsers.idiom_review",
  "lintro.parsers.markdownlint",
  "lintro.parsers.pytest",
  "lintro.parsers.ruff",
  "lintro.parsers.rustfmt",
  "lintro.parsers.semgrep",
  "lintro.parsers.yamllint",
  "lintro.parsers.mypy",
  "lintro.parsers.osv_scanner",
  "lintro.parsers.pip_audit",
  "lintro.parsers.oxfmt",
  "lintro.parsers.oxlint",
  "lintro.parsers.prettier",
  "lintro.parsers.sarif",
  "lintro.parsers.shellcheck",
  "lintro.parsers.shfmt",
  "lintro.parsers.sqlfluff",
  "lintro.parsers.stylelint",
  "lintro.parsers.svelte_check",
  "lintro.parsers.taplo",
  "lintro.parsers.pydoclint",
  "lintro.parsers.tsc",
  "lintro.parsers.vale",
  "lintro.parsers.vue_tsc",
  "lintro.plugins",
  "lintro.tools",
  "lintro.tools.core",
  "lintro.tools.core.install_strategies",
  "lintro.tools.definitions",
  "lintro.tools.idiom_review",
  "lintro.tools.implementations",
  "lintro.tools.implementations.pytest",
  "lintro.tools.implementations.ruff",
  "lintro.utils",
  "lintro.utils.console",
  "lintro.utils.environment",
  "lintro.utils.execution",
  "lintro.utils.output",
]

[tool.setuptools.package-data]
lintro = ["tools/*.json"]
"lintro.ai.prompts.templates" = ["**/*.md", "**/*.json"]
"lintro.ai.review.checklist" = ["corpus/*.yaml"]

[tool.ruff]
line-length = 88
target-version = "py311"
unsafe-fixes = false
exclude = [
  ".venv",
  "venv",
  "env",
  "build",
  "dist",
  "__pycache__",
  "test_samples",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "W", "I", "COM", "N", "D", "DOC", "UP", "B", "C4", "SIM"]
ignore = []
preview = true
explicit-preview-rules = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501", "SIM117", "SIM105"]
".lintro/**/*.py" = ["E501"]
"**/__init__.py" = ["D104"]
"test_samples/**/*.py" = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313", "py314"]
exclude = "/(\n    \\.git\n    | \\.venv\n    | venv\n    | build\n    | dist\n    | __pycache__\n    | test_samples\n    | node_modules\n)/\n"

[tool.bandit]
exclude_dirs = ["test_samples"]
# Suppression policy (see issue #1026):
#   - Global skips are reserved for rules that are genuinely universal noise
#     across the whole codebase and cannot be meaningfully scoped.
#   - Subprocess rules (B404/B603/B607) are NOT skipped globally: subprocess is
#     the core execution mechanism, but each call site must be reviewed and
#     suppressed inline with a justification, e.g.
#       ``subprocess.run(...)  # nosec B603 - resolved binary, shell=False, no user shell input``
#   - Use a file-top / per-call-site ``# nosec Bxxx - <specific reason>`` rather
#     than a broad global skip whenever the rule can apply to new code.
skips = [
  "B101", # assert_used — pytest and test helpers rely on ``assert`` across all of tests/; genuinely universal, cannot be scoped meaningfully
  "B108", # hardcoded_tmp_directory — ``/tmp`` appears in fixtures and temp-path examples throughout tests; universal noise
]

[tool.lintro]
line_length = 88
tool_order = "priority"

[tool.lintro.post_checks]
enabled = true
tools = ["black"]
enforce_failure = true

# Warn-level module-size gate (issue #1052). Guards against the recurring
# oversized-module pattern. Non-blocking today: existing violators are
# baselined so the gate is green on merge. Ratchet plan: refactor the baselined
# modules below the threshold, remove them from `baseline`, then lower
# `threshold` in steps (800 -> 700 -> 600). See lintro/utils/module_size.py.
[tool.lintro.module_size]
enabled = true
threshold = 800
baseline = [
  "lintro/ai/review/orchestrator.py",
  "lintro/utils/tool_executor.py",
  "lintro/cli_utils/commands/doctor.py",
  "lintro/tools/definitions/tsc.py",
  "lintro/ai/review/checklist_builtin.py",
  "lintro/tools/definitions/_ts_checker_base.py",
]
exclude = [
  "test_samples/",
  "node_modules/",
  ".venv/",
  "venv/",
  "dist/",
  "build/",
  "__pycache__/",
  ".lintro/",
  "tests/",
]

[tool.lintro.ruff]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = false
warn_unused_ignores = true
warn_unused_configs = true
explicit_package_bases = true
namespace_packages = true
exclude = [
  "^test_samples/",
  "^node_modules/",
  "^dist/",
  "^build/",
  "^\\.venv/",
  "^venv/",
  "^env/",
  "^__pycache__/",
  "^\\.lintro/",
]

[[tool.mypy.overrides]]
module = ["assertpy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["click_man", "click_man.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "tests",
  "tests.*",
  "tests.unit",
  "tests.unit.*",
  "tests.utils",
  "tests.utils.*",
  "tests.scripts",
  "tests.scripts.*",
  "tests.integration",
  "tests.integration.*",
]
disallow_untyped_defs = false
disallow_untyped_calls = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["scripts", "scripts.*", "scripts.utils", "scripts.utils.*"]
disallow_untyped_defs = false
check_untyped_defs = true

[tool.uv]
constraint-dependencies = [
  # Security fix: TOCTOU vulnerability in directory creation (dependabot alert #4)
  "virtualenv>=20.36.1",
  # High-severity transitive remediation (issue #1118). Every advisory below
  # flows through semgrep (`tools` extra) / twine (dev group) -> mcp; none are
  # core runtime deps, but we force the patched versions so no shipped extra
  # carries a known high-severity vulnerability.
  # pyjwt: crit-header handling / RFC 7515 violation
  # (GHSA-xgmm-8j9v-c9wx, supersedes prior >=2.12.1 for GHSA-... alert #26)
  "pyjwt>=2.13.0",
  # starlette: multipart/form parsing DoS
  # (GHSA-82w8-qh3p-5jfq, GHSA-wqp7-x3pw-xc5r)
  "starlette>=1.3.1",
  # cryptography: OpenSSL-backed high-severity advisory (GHSA-537c-gmf6-5ccf)
  "cryptography>=48.0.1",
  # python-multipart: parser resource-exhaustion DoS
  # (GHSA-5rvq-cxj2-64vf, GHSA-pp6c-gr5w-3c5g)
  "python-multipart>=0.0.30",
  # urllib3: redirect / pool-manager high-severity advisories
  # (GHSA-qccp-gfcp-xxvc, GHSA-mf9v-mfxr-j63j)
  "urllib3>=2.7.0",
]
override-dependencies = [
  # semgrep 1.151.0 pins rich~=13.5.2 but lintro requires rich>=14.2.0.
  # Safe: lintro invokes semgrep as a subprocess; rich version doesn't affect its behavior.
  # TODO: Remove once semgrep drops the rich<14 pin (not tracked by Renovate).
  "rich>=14.2.0",
]

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = true
check-return-types = false
check-arg-order = true
skip-checking-short-docstrings = true
allow-init-docstring = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
